AMBARI-24346 Host Details page: alignment issues

--- a/ambari-web/app/styles/modal_popups.less
+++ b/ambari-web/app/styles/modal_popups.less
@@ -286,8 +286,11 @@
           width:100%;
           overflow: auto;
         }
-        table{
+        table {
           margin: 0 auto;
+          input[type="checkbox"] + label {
+            top: 0;
+          }
         }
         .message{
           color: #777;
